fix icon stroke-lincap cropping

--- a/app/components/application/application.styl
+++ b/app/components/application/application.styl
@@ -82,8 +82,8 @@
 
       > .icon
         flex 1 0 auto
-        width 1em
-        height 1em
+        width 1.125em
+        height 1.125em
         stroke currentColor
 
   .modal-footer
